src/assets/css/styles.css
/* ... */
.analytics select option{
  margin:10px !important;
   font-family: "Gotham";
     cursor:pointer;
}
.btn-group {
  margin-top: 10px;
  margin-bottom: 10px;
}
.btn-group .btn{
  background-color:var(--night-blue); 

}
.btn-group .btn:hover,.btn-group .btn:focus,.btn-group .btn.active {
  background-color:var(--lavender); 
  color: var(--night-blue);

}
/*------------ table ------------*/


.summary {
  margin-left: 20px;
  width:100%;
}
.summary th{
  color: var(--c-body1);
  
  text-transform: uppercase;
  color:var(--night-blue); 
  font-size: 12px;
}

.summary td{
  
  font-size: 12px;
}

.summary tr{
  
  border-bottom: 1px solid var(--lavender);
}

.BarChart{
  width: 100% !important;
  padding: 10px;
  height: 100%;

}
/************* MAP **********************/

.map .btn-group {
  margin-top: 10px;
  margin-bottom: 10px;
}
.map .btn-group .btn{
  background-color: #728bbc; 

}
.map .btn-group .btn:hover,.btn-group .btn:focus , .map .btn-group .btn.active {
  background-color:var(--lavender); 
  color: #728bbc

}

.svg-map {
  width: 100%;
  height: auto;
 /* stroke: var(--purple-Heart);*/
  stroke-width: 1;
  stroke-linecap: round;
  stroke-linejoin: round; }
.svg-map__location {
  /*  fill: #B5C7EA ;*/
    cursor: pointer; }

.svg-map__location--int00{
  fill:#7696AE;
}
.svg-map__location--int01{
  fill:#566A92;
}
.svg-map__location--int02{
  fill:#475484;
}
.svg-map__location--int03{
  fill:#292B68;
}
.svg-map__location--int04{
  fill:#00004D;
}
.svg-map__location--int10{
  fill:#F8C2AF;
}
.svg-map__location--int11{
  fill:#F79792;
}
.svg-map__location--int12{
  fill:#D84560;
}
.svg-map__location--int13{
  fill:#BB1D4B;
}
.svg-map__location--int14{
  fill:#93003A;
}

.svg-map__location--int20{
  fill:#B8D4E6;
}
.svg-map__location--int21{
  fill:#8AC2E6;
}
.svg-map__location--int22{
  fill:#5CB1E6;
}
.svg-map__location--int23{
  fill:#148DD9;
}
.svg-map__location--int24{
  fill:#0076BF;
}

.svg-map__location--int0:hover,.svg-map__location--int3:hover,.svg-map__location--int2:hover,.svg-map__location--int1:hover,
.svg-map__location--int0:focus,.svg-map__location--int3:focus,.svg-map__location--int2:focus,.svg-map__location--int1:focus
{
     fill: var(--lavender);
     opacity: 0.6;
     border: none;
    
       }
.svg-map__location[aria-checked=true] {
      fill: #f4bc44; }

  .mapTooltip{
    font-size: 14px;
    position: fixed;
    width: 200px;
    padding: 10px;
    border-radius: 20;
    background-color:white;  
    
    color: black;
    opacity: 0.9;
    /*background-color: rgba(255, 255, 255, .15);  
    backdrop-filter: blur(5px);*/
  }
  .blur{
    background-color: rgba(255, 255, 255, .15);  
    backdrop-filter: blur(10px);
    border-color: transparent;
  }
.franceMap{
  display: flex;
  width: 100%;
  height: 100%;
}
.legendeMap {
 margin:10px;
}
.legendeMap td{
  text-align: center; 
  color: black; 
  font-size: 70%; 
  padding: 5px;
}

  @media only screen and (max-width: 500px) {
    body {
      overflow: hidden;
    }
  .container{
    overflow: scroll;
  }
    .content.is-open {
      margin-left: 100%;
    }
  
    .sidebar.is-open {
      min-width: 100%;
      max-width: 100%;
      margin-left: 0;
      transition: all 0.5s, height 0s;
    }
  
    li a.dropdown-toggle::after {
      display: inline-block;
      position: relative;
      left: 68%;
    }
  }
  

  @media only screen and  (max-width: 768px) {
     .container {
       min-height: 100%;
       margin-left: 10px !important;

     }
   
  }


  /* ---------------------------------------------------
      SOCIAL ICONS STYLE
  ----------------------------------------------------- */

.social-icons {
  padding: 0;
  list-style: none;
  margin: 1em;
  align-self: center;
}

.social-icons li {
  display: inline-block;
  margin: 0.5em;
  position: relative;
  font-size: 1em;
}

.social-icons .social-icon {
  
  color: var(--purple-Heart);
  position: absolute;
  top: 0.8em;
  left: 0.8em;
  transition: all 265ms ease-out;
}

.social-icons .link {
  display: inline-block;
}
.social-icon{
  width: 20px;
  height: 20px;
  color: white;
  fill: var(--night-blue);

}
.social-icons .link:before {
  transform: scale(1);
  -ms-transform: scale(1);
  -webkit-transform: scale(1);
  content: " ";
  width: 45px;
  height: 45px;
  border-radius: 100%;
  display: block;
  background: var(--purple-Heart);
  transition: all 265ms ease-out;
}

.social-icons .link:hover:before {
  transform: scale(0);
  transition: all 265ms ease-in;
}

.social-icons .link:hover .social-icon {
  transform: scale(2);
  -ms-transform: scale(2);
  -webkit-transform: scale(2);
  fill: var(--night-blue);
  background: transparent;
  transition: all 265ms ease-in;
}

/* ABOUT US PAGE STYLES */


.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 8px;
}

.about-section {
  padding: 50px;
  text-align: center;
 
  color: var(--night-blue);
}

.cont {
  padding: 0 16px;
}

.cont::after, .row::after {
  content: "";
  clear: both;
  display: table;
}

.title {
  color: grey;
}

.button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: white;
  background-color: #000;
  text-align: center;
  cursor: pointer;
  width: 100%;
}

.button:hover {
  background-color: #555;
}






/***** ABOUT US STYLES *****/





.our-team{
  border-radius: 15px;
  text-align: center;
  padding: 20px 15px 30px;
  /*background: #fff;*/

}
.our-team .pic{
/*background: #fff;*/
  padding: 10px;
  margin-bottom: 25px;
  display: inline-block;
  width: 100%;
  height: 100%;
  transition: all 0.5s ease 0s;
}
.our-team:hover .pic{
  background: var(--night-blue);
  border-radius: 50%;
}
.pic img{
  width: 100%;
  height: auto;
  border-radius: 50%;
}
.our-team .title{
  font-weight: 600;
  color: #2e282a;
  text-transform: uppercase;
  display: block;
  font-size: 20px;
  margin: 0 0 7px 0;
}
/* ... */

